--- a/src/app/docs/architecture/page.mdx
+++ b/src/app/docs/architecture/page.mdx
@@ -1,318 +1,120 @@
-
 ## Architecture
 
-**Automate** the boring. Architecture embodies the same principles we apply to business automation — minimal complexity, maximum efficiency, and atomic reusability. Every component is designed to work independently while contributing to a cohesive ecosystem.
+Our architecture is engineered from the ground up for reusability, modularity, and a world-class developer experience. It's not just a system for building applications; it's a framework for composing "atomic" automation components into a powerful, collaborative, and AI-augmented ecosystem. We prioritize a scalable, feature-based structure to ensure that every contribution adds lasting, discoverable value to the entire codebase.
 
-We don't just build software; we craft **automation solutions** that scale with your business. From single components to complete platforms, our architecture supports the journey from prototype to production.
+### Core Architectural Principles
 
-### Core Design Philosophy
+Our design decisions are guided by a few key principles:
 
-#### **Atomic Everything**
-- **Component-First** - Every piece of UI is a reusable, tested component
-- **Minimal Complexity** - Simple solutions that compound into powerful systems
-- **Open Source First** - Transparency in every line of code
-- **Shadcn/UI Inspired** - Following proven patterns and naming conventions
+- **Component-Driven Modularity** – Inspired by the philosophy of shadcn/ui, we provide a codebase of reusable, customizable components at their most minimal, essential state. Every piece of functionality is an "atomic" building block designed for composition.
+- **Superior Developer Experience** – We believe that an intuitive and predictable structure is key to productivity. Our architecture is designed to be easily understood, navigated, and extended.
+- **Feature-Based & Composable** – The system is built as a collection of features, enabling a micro-services and micro-frontends approach. Independent components and services can be developed, deployed, and composed to build complex applications.
+- **Serverless-First** – We leverage a serverless paradigm to eliminate infrastructure management, enable automatic scaling, and optimize operational costs. Our system scales seamlessly from a single user to enterprise-level demand.
+- **Type-Safety by Default** – We enforce strict type safety across the entire stack, from the database to the frontend. This minimizes runtime errors and enhances code reliability.
+- **AI-Augmented Workflow** – Artificial intelligence is woven into the fabric of our architecture. From AI-assisted coding to intelligent automation agents, we use AI to accelerate the development lifecycle.
 
-#### **Modern Web Standards**
-- **Next.js 15** - App Router with React 19 for cutting-edge performance
-- **TypeScript** - Type safety across the entire stack
-- **MDX Integration** - Documentation as code with seamless content management
-- **Tailwind CSS** - Utility-first styling for consistent design systems
+### The Composition Hierarchy: From Atoms to Apps
 
-#### **Business-Focused Architecture**
-- **Documentation-Driven** - Every feature documented, every decision transparent
-- **Community-Centric** - Built for contributors, maintained by the community
-- **Automation-Ready** - Architecture designed for business process automation
+Our methodology is based on a clear and scalable composition hierarchy. We don't just provide code; we provide the building blocks for value creation.
 
-### Technology Stack
+1. **Atoms** – The foundation is built using core shadcn/ui components and other primitives. These are the most basic, indivisible UI elements.
+2. **Templates** – We shape Atoms into Templates—reusable layouts and component compositions that solve common UI patterns (e.g., a standard page layout, a data table structure).
+3. **Building Blocks** – A Building Block combines Templates with client-side logic (`hooks.ts`, `validation.ts`) to create interactive, feature-rich user experiences.
+4. **Microservices** – A Microservice is the combination of Building Blocks with backend logic (`actions.ts`). It's a fully encapsulated feature, complete with its UI, data models, and API, that can operate independently.
+5. **Full Apps** – Finally, we craft Full Apps by composing various Microservices, creating a cohesive, enterprise-grade solution.
 
-#### **Frontend Foundation**
+This layered approach, influenced by component management platforms like Bit, ensures that every part of the system is reusable and contributes to a greater whole.
 
-<div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="p-6 border rounded-lg">
-    <h4 className="font-semibold mb-2">Next.js 15</h4>
-    <div className="text-sm text-muted-foreground mb-2">
-      App Router with React 19 Server Components
-    </div>
-    <ul className="text-xs text-muted-foreground space-y-1">
-      <li>• File-based routing with app directory</li>
-      <li>• Server and client components</li>
-      <li>• Built-in performance optimizations</li>
-    </ul>
-  </div>
-  
-  <div className="p-6 border rounded-lg">
-    <h4 className="font-semibold mb-2">TypeScript</h4>
-    <div className="text-sm text-muted-foreground mb-2">
-      Full-stack type safety and developer experience
-    </div>
-    <ul className="text-xs text-muted-foreground space-y-1">
-      <li>• Strict type checking</li>
-      <li>• IntelliSense and autocomplete</li>
-      <li>• Compile-time error detection</li>
-    </ul>
-  </div>
-  
-  <div className="p-6 border rounded-lg">
-    <h4 className="font-semibold mb-2">Tailwind CSS 4</h4>
-    <div className="text-sm text-muted-foreground mb-2">
-      Latest utility-first CSS framework
-    </div>
-    <ul className="text-xs text-muted-foreground space-y-1">
-      <li>• CSS variables for theming</li>
-      <li>• JIT compilation</li>
-      <li>• Dark mode support</li>
-    </ul>
-  </div>
-  
-  <div className="p-6 border rounded-lg">
-    <h4 className="font-semibold mb-2">Shadcn/UI</h4>
-    <div className="text-sm text-muted-foreground mb-2">
-      Copy-paste components built on Radix UI
-    </div>
-    <ul className="text-xs text-muted-foreground space-y-1">
-      <li>• Radix UI primitives</li>
-      <li>• Accessible by default</li>
-      <li>• Customizable and composable</li>
-    </ul>
-  </div>
-</div>
+### Project Structure: A Feature-Based, Mirror-Pattern Approach
 
-#### **Content & Documentation**
+Our project structure follows a predictable, mirror-pattern architecture that enhances code discoverability and creates an intuitive mental model for developers.
 
-```typescript
-// MDX Configuration
-const withMDX = createMDX({
-  // Documentation as code approach
-  pageExtensions: ['js', 'jsx', 'mdx', 'ts', 'tsx'],
-  // Seamless integration with Next.js
-})
+#### Philosophy: URL-to-Directory Mapping
 
-// Component-driven documentation
-export default function DocsLayout({ children }: { children: React.ReactNode }) {
-  return (
-    <div className="docs-container">
-      <Sidebar />
-      <main className="docs-content">
-        {children}
-      </main>
-    </div>
-  )
-}
+Every URL route has a corresponding, mirrored directory structure for its component logic. If you can see a URL, you know exactly where to find its code.
+
+```text
+URL: /appointment
 ```
 
-#### **State Management & Utilities**
+mirrors to:
 
-<div className="grid grid-cols-1 md:grid-cols-3 gap-4 my-6">
-  <div className="p-4 border rounded-lg text-center">
-    <h4 className="font-semibold mb-2">Jotai</h4>
-    <div className="text-sm text-muted-foreground">
-      Atomic state management
-    </div>
-  </div>
-  
-  <div className="p-4 border rounded-lg text-center">
-    <h4 className="font-semibold mb-2">React Hook Form</h4>
-    <div className="text-sm text-muted-foreground">
-      Performant form handling
-    </div>
-  </div>
-  
-  <div className="p-4 border rounded-lg text-center">
-    <h4 className="font-semibold mb-2">Framer Motion</h4>
-    <div className="text-sm text-muted-foreground">
-      Smooth animations
-    </div>
-  </div>
-</div>
-
-### Project Ecosystem
-
-Our architecture spans multiple specialized projects, each serving different aspects of business automation:
-
-#### **1. Databayt** (Main Platform)
-- **Repository**: [github.com/abdout/databayt](https://github.com/abdout/databayt)
-- **Purpose**: Core business automation platform
-- **Tech Stack**: Next.js 15, TypeScript, Tailwind CSS, Shadcn/UI
-- **Features**: Documentation system, component library, automation tools
-
-#### **2. Hogwarts** (Education Platform)
-- **Repository**: [github.com/abdout/hogwarts](https://github.com/abdout/hogwarts)
-- **URL**: [ed.databayt.org](https://ed.databayt.org)
-- **Purpose**: Educational and learning management
-- **Additional Features**: Authentication (NextAuth/Clerk), Database (Prisma)
-
-#### **3. Future Platforms** (In Development)
-- **Co**: Collaboration and community features
-- **NMBD**: Specialized automation modules
-
-### Component Architecture
-
-#### **Atomic Design System**
-
-```typescript
-// Component hierarchy following atomic design
-interface ComponentStructure {
-  atoms: [
-    'Button', 'Input', 'Label', 'Badge'
-  ],
-  molecules: [
-    'SearchBox', 'FormField', 'Card'
-  ],
-  organisms: [
-    'Header', 'Sidebar', 'DataTable'
-  ],
-  templates: [
-    'DocsLayout', 'DashboardLayout', 'LandingLayout'
-  ],
-  pages: [
-    'HomePage', 'DocsPage', 'DashboardPage'
-  ]
-}
+```text
+app/appointment/          (Next.js App Router files)
+components/appointment/   (All related component logic)
 ```
 
-#### **File Organization**
+#### Directory Structure
 
-```
-src/
-├── app/                    # Next.js App Router
-│   ├── (marketing)/       # Marketing pages
-│   ├── docs/              # Documentation
-│   ├── dashboard/         # Admin interface
-│   └── layout.tsx         # Root layout
-├── components/            # Reusable components
-│   ├── ui/               # Shadcn/UI components
-│   ├── atom/             # Atomic components
-│   ├── template/         # Page templates
-│   └── feature/          # Feature-specific components
-├── lib/                  # Utilities and helpers
-├── hooks/                # Custom React hooks
-└── styles/               # Global styles
-```
-
-### Development Workflow
-
-#### **Package Management**
-```bash
-# Using pnpm for efficient dependency management
-pnpm install    # Install dependencies
-pnpm dev        # Development server
-pnpm build      # Production build
-```
-
-#### **Code Standards**
-- **ESLint** with Next.js configuration
-- **TypeScript** strict mode enabled
-- **Prettier** for consistent formatting
-- **Shadcn/UI** naming conventions
-
-#### **Component Development**
-
-```typescript
-// Example component following our patterns
-interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
-  variant?: 'default' | 'destructive' | 'outline'
-  size?: 'default' | 'sm' | 'lg'
-}
-
-export const Button = React.forwardRef<HTMLButtonElement, ButtonProps>(
-  ({ className, variant = 'default', size = 'default', ...props }, ref) => {
-    return (
-      <button
-        className={cn(buttonVariants({ variant, size }), className)}
-        ref={ref}
-        {...props}
-      />
-    )
-  }
-)
+```text
+project-root/
+├── app/                     # Next.js App Router (Routing & Layouts)
+│   ├── appointment/
+│   │   ├── page.tsx
+│   │   ├── layout.tsx
+│   │   └── loading.tsx
+│   └── dashboard/
+│       ├── page.tsx
+│       └── settings/
+│           └── page.tsx
+│
+├── components/              # Component Logic (Mirrors `app` structure)
+│   ├── appointment/
+│   │   ├── actions.ts       # Server actions & API calls
+│   │   ├── constants.ts     # Arrays, enums, static data
+│   │   ├── validation.ts    # Zod schemas & validation logic
+│   │   ├── types.ts         # TypeScript interfaces & types
+│   │   ├── form.tsx         # Form components
+│   │   ├── cards.tsx        # Card components
+│   │   ├── content.tsx      # UI content components
+│   │   └── hooks.ts         # Custom React hooks
+│   └── dashboard/
+│       ├── actions.ts
+│       ├── constants.ts
+│       └── settings/
+│           ├── form.tsx
+│           └── validation.ts
+│
+├── lib/                     # Shared utilities & functions
+├── types/                   # Global TypeScript definitions
+└── public/                  # Static assets
 ```
 
-### Performance Strategy
+### Standardized File Patterns
 
-#### **Build Optimization**
-- **Turbopack** for faster development builds
-- **MDX** compilation for documentation
-- **Tree shaking** for minimal bundle sizes
-- **Code splitting** with Next.js automatic optimization
+To ensure consistency, each feature directory follows standardized naming conventions. A CLI tool helps scaffold these files automatically, enforcing the pattern across the codebase.
 
-#### **Runtime Performance**
-- **React 19** with concurrent features
-- **Server Components** for reduced client bundle
-- **Image optimization** with Next.js Image component
-- **Font optimization** with Geist font family
+| File           | Purpose                                   | Example Content                         |
+|----------------|-------------------------------------------|-----------------------------------------|
+| `actions.ts`   | Server actions, API calls, data mutations | `createAppointment()`, `updateStatus()` |
+| `constants.ts` | Static data, enums, configuration         | Status arrays, default values           |
+| `validation.ts`| Zod schemas for form and API validation   | Input schemas, error messages           |
+| `types.ts`     | TypeScript interfaces and type definitions| Component props, data models            |
+| `form.tsx`     | Form components using React Hook Form     | Input fields, submission logic, state   |
+| `cards.tsx`    | Card-based UI components                  | Data display cards, interactive elements|
+| `content.tsx`  | General UI content and layout components  | Headers, descriptions, sections         |
+| `hooks.ts`     | Custom React hooks for state and effects  | `useAppointmentState()`, `useStatusQuery()` |
 
-### Authentication & Database (Hogwarts)
+We leverage **TypeScript Generics** extensively within these files, especially in `types.ts` and `hooks.ts`, to create highly reusable and flexible logic that can be adapted to various data structures without sacrificing type safety.
 
-#### **Authentication Options**
-```typescript
-// Multiple auth providers supported
-providers: [
-  NextAuth.Provider,    // Traditional auth
-  Clerk.Provider,       // Modern auth solution
-]
+### System Layers & Data Flow
 
-// Protected routes
-middleware: [
-  authMiddleware,       // Route protection
-  roleBasedAccess,      // Permission management
-]
-```
+This structured, component-based approach integrates seamlessly with our technical system layers.
 
-#### **Database Layer**
-- **Prisma** ORM for type-safe database access
-- **PostgreSQL** for production workloads
-- **Database migrations** with Prisma migrate
+1. **Presentation Layer (Next.js/React)** – Renders the components defined in `form.tsx`, `cards.tsx`, and `content.tsx`.
+2. **Application & API Layer (Vercel)** – Executes the logic from `actions.ts`, validates data with schemas from `validation.ts`, and handles authentication with Auth.js.
+3. **Data & Persistence Layer (PlanetScale/Prisma)** – Interacts with the database based on the schemas and types defined in `types.ts`.
+4. **AI & Automation Core (Python/Rust/LangGraph)** – The complex automation agents are often invoked from within `actions.ts`, acting as the most powerful type of "microservice."
+5. **Development & Integration Layer** – Our CLI, Cursor editor, and Claude assistant all understand this structure, making development a fluid, AI-augmented experience we call Vibe Coding.
 
-### Deployment Architecture
+#### A Typical Interaction
 
-#### **Static Generation**
-- **MDX** content pre-rendered at build time
-- **ISR** (Incremental Static Regeneration) for dynamic content
-- **CDN** optimization for global distribution
-
-#### **Hosting Strategy**
-- **Vercel** for optimal Next.js deployment
-- **Edge Functions** for dynamic features
-- **Analytics** integration for performance monitoring
-
-### Security Considerations
-
-#### **Type Safety**
-- **TypeScript** strict mode prevents runtime errors
-- **Zod** validation for form inputs and API data
-- **ESLint** security rules enabled
-
-#### **Authentication Security**
-- **JWT** tokens for session management
-- **CSRF** protection enabled
-- **Rate limiting** on API routes
+1. A user interacts with a component from `form.tsx` on the Next.js frontend, triggering a Server Action from `actions.ts`.  
+2. The request payload is validated by a Zod schema from `validation.ts`.  
+3. The serverless function uses the type-safe Prisma client to query PlanetScale, using interfaces from `types.ts`.  
+4. For complex tasks, the action invokes a LangGraph agent.  
+5. The result is **streamed** back and managed by a hook from `hooks.ts`, efficiently updating the UI.
 
 ---
 
-### What Makes This Different
-
-#### **Business-First**
-Every architectural decision is made with business automation in mind. Our components aren't just UI elements — they're building blocks for automation solutions.
-
-#### **Community-Driven**
-Open source from day one, with clear contribution guidelines and transparent development. Every line of code serves the community.
-
-#### **Documentation-Native**
-Architecture that treats documentation as a first-class citizen. MDX integration means our docs are as powerful as our applications.
-
-#### **Minimal Complexity**
-We choose simple, proven solutions over complex abstractions. TypeScript + Tailwind + Shadcn/UI creates a powerful yet approachable development experience.
-
----
-
-### Getting Started
-
-Ready to build with our architecture? Start here:
-
-* [**Development Setup**](/docs/development/setup) - Get your local environment ready
-* [**Component Guide**](/docs/development/components) - Learn our component patterns
-* [**Contributing**](/docs/contributing) - Join the community
-* [**Technical Records**](/docs/development/technical-record) - Deep dive into decisions
-
-**Questions about our architecture?** [Join the discussion](/docs/community/discussions) or [contact our technical team](/docs/community/support). 
+This reorganized document follows the same styling and structural conventions used across the documentation, ensuring a cohesive reading experience.
